# url_shortener

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  app-deployment.yaml  app-ingress.yaml  app-service.yaml  install.sh  redis-service.yaml  uninstall.sh
backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Jenkinsfile
backend/deployment/rust-url-shortener/: Chart.yaml  values.yaml
backend/deployment/rust-url-shortener/templates/app/: app-deployment.yaml  app-ingress.yaml
backend/deployment/url-shortener-backend/: Chart.yaml  values.yaml
backend/deployment/url-shortener-backend/templates/app/: app-deployment.yaml  app-ingress.yaml
backend/deployment/url-shortener-backend/templates/redis/: redis-service.yaml
backend/src/: main.rs
backend/static/: index.html
backend/url_shortener_algo/: Cargo.toml
backend/url_shortener_algo/src/: lib.rs
backend/url_shortener_backend/: Cargo.toml
backend/url_shortener_backend/src/: lib.rs  main.rs  security.rs
backend/url_shortener_redis/: Cargo.toml
backend/url_shortener_redis/src/: lib.rs
deployment/: .gitignore  app-deployment.yaml  app-namespace.yaml
deployment/rust-url-shortener/: Chart.yaml  values.yaml
deployment/url-shortener/: Chart.yaml  values.yaml
deployment/url-shortener-redis/: Chart.yaml  values.yaml
frontend/: .dockerignore  Dockerfile  Jenkinsfile  index.html  package.json
frontend/src/: App.vue
frontend/src/assets/: main.css
src/: lib.rs  main.rs  security.rs
static/: index.html
url_shortener_algo/src/: lib.rs
url_shortener_redis_server/: Cargo.toml
(+39 files in other folders)
