[package]
name = "url_shortener_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"

url_shortener_algo = {path = "./url_shortener_algo", version="0.1.0"}
url_shortener_redis_server = {path = "./url_shortener_redis_server", version="0.1.0"}

ammonia = "3.2.1"
url = "2.3.1"